fix: registration-form blocking text

--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -37,7 +37,7 @@
     <!--
     A page with pathname of "registration" or the premade template in the PWA can be used.
     -->
-    <div id="registration-form">
+    <div id="registration-form" class="mt-36">
         <section class="rounded-md my-36 m-auto h-auto w-11/12 max-w-xl bg-gray-800">
             <form id="user-form">
                 <div class="rounded-md max-w-md w-full bg-gray-900 p-6 space-y-4">
