feat: work on coupons, almost done

--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -1,14 +1,15 @@
-<h1 class="page-title">Your Rewards <span class="page-title-amount">({{customerRewards.unused}})</span></h1>
+<h1 class="page-title">Your Coupons
+    <span class="page-title-amount"><!-- Maybe add something like on rewards page ({{customerCoupons.unused}}) -->/</span></h1>
 <div class="page-content">
-    <div class="page-text">Show the QR code to use the reward.</div>
+    <div class="page-text">Activate coupons and show the QR code.</div>
     <div id="no-coupons">
-        {{#unless user.rewards}}
-        <b>You don&#039;t have any rewards.</b>
+        {{#unless user.coupons}}
+        <b>You don&#039;t have any coupons.</b>
         {{/unless}}
     </div>
 
     <div>
-        {{#each user.rewards}}
+        {{#each user.coupons}}
         <div>
             <div class="w-full h-full py-5 flex justify-center items-center">
                 <div class="relative shadow-md pl-1 bg-transparent flex justify-center rounded-xl hover:scale-110 duration-500 transform transition cursor-pointer">
@@ -19,13 +20,13 @@
                     <div class="top-0 left-0 h-2 md:h-3 mt-6 pl-5 rounded-3xl absolute z-0 bg-green-600"></div>
                     <div class="w-80 pb-2 bg-white rounded-xl shadow-xl z-10">
                         <div class="relative">
-                            <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
+                            <div data-qrcode="coupon:{{coupon.id}}" class="w-56 m-auto p-3"></div>
                             <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
-                                Your reward
+                                Your coupon
                             </div>
                         </div>
                         <div class="px-2 py-1">
-                            <!-- Reward and its name -->
+                            <!-- coupon and its name -->
                             <div class="text-sm md:text-base font-bold pr-2">
                                 <!-- Star -->
                                 <svg xmlns="http://www.w3.org/2000/svg" class="inline h-4 md:h-5 md:w-5 text-yellow-500"
@@ -33,21 +34,21 @@
                                     <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
                                 </svg>
                                 <span>
-                                    {{name}}
+                                    {{coupon.reward.name}}
                                 </span>
                             </div>
                             <div class="flex py-2">
-                                {{#if itemDiscount}}
+                                {{#if coupon.reward.itemDiscount}}
                                 <!-- The discount label e.g., "50% OFF" -->
                                 <p class="bg-gray-200 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
-                                    {{itemDiscount}}
+                                    {{coupon.reward.itemDiscount}}
                                 </p>
                                 {{/if}}
                                 <div class="flex justify-between item-center">
                                     <div class="flex items-center">
                                         <!-- Customer points -->
                                         <p class="text-gray-600 font-bold text-xs md:text-sm ml-1">
-                                            {{#if customerPoints}} +{{customerPoints}} points {{/if}}
+                                            {{#if coupon.reward.customerPoints}} +{{coupon.reward.customerPoints}} points {{/if}}
                                         </p>
                                     </div>
                                 </div>
@@ -55,13 +56,13 @@
                             <!-- Description (categories, products) etc -->
                             <div class="h-12 pb-1 md:pb-2 text-xs md:text-sm text-gray-500">
                                 <p>
-                                    {{description}}
+                                    {{coupon.reward.description}}
                                 </p>
                                 <div>
-                                    {{#if categories}}
+                                    {{#if coupon.reward.categories}}
                                     <p class="font-bold">Categories:
                                         <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
-                                        {{#each categories}}
+                                        {{#each coupon.reward.categories}}
                                             <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">{{name}}</span>
                                         {{/each}}
                                         </span>
@@ -69,10 +70,10 @@
                                     {{/if}}
                                 </div>
                                 <div>
-                                    {{#if products}}
+                                    {{#if coupon.reward.products}}
                                     <p class="font-bold">Products:
                                         <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
-                                        {{#each products}}
+                                        {{#each coupon.reward.products}}
                                             <span class="inline-flex bg-gray-100 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">{{name}}</span>
                                         {{/each}}
                                         </span>
@@ -80,9 +81,10 @@
                                     {{/if}}
                                 </div>
                                 <div>
+                                    <!-- The coupon expiration. The reward expiration is not really useful with coupons at all. -->
                                     {{#if expires}}
                                     <p>
-                                        Expires <span>{{expires}}</span>
+                                        Coupon Expires <span>{{expires}}</span>
                                     </p>
                                     {{/if}}
                                 </div>
@@ -94,66 +96,6 @@
 
         </div>
         {{/each}}
-
-        {{#if user.usedRewards}}
-        <hr class="bg-gray-200"/>
-        {{/if}}
-
-        {{#each user.usedRewards}}
-        <div>
-            <div class="w-full h-full py-5 flex justify-center items-center">
-                <div class="relative shadow-md pl-1 bg-transparent flex justify-center rounded-xl">
-                    <div class="top-0 left-0 mt-3 px-2 rounded-lg absolute z-30 bg-gray-500 text-gray-100 text-xs md:text-sm font-medium md:block">
-                        Used
-                    </div>
-                    <div class="top-0 left-0 h-2 md:h-3 mt-5 px-2 absolute z-20 bg-gray-500"></div>
-                    <div class="top-0 left-0 h-2 md:h-3 mt-6 pl-5 rounded-3xl absolute z-0 bg-gray-500"></div>
-                    <div class="w-80 pb-2 bg-white rounded-xl shadow-xl z-10">
-                        <div class="relative">
-                            <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
-                            <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-800 text-gray-100 text-xs font-medium">
-                                Used reward
-                            </div>
-                        </div>
-                        <div class="px-2 py-1">
-                            <div class="text-sm md:text-base font-bold pr-2">
-                                <span>
-                                    {{reward.name}}
-                                </span>
-                            </div>
-                            <div class="flex py-2">
-                                {{#if itemDiscount}}
-                                <!-- The discount label e.g., "50% OFF" -->
-                                <p class="bg-gray-200 p-1 px-2 mr-2 rounded-full text-xs font-medium text-gray-900">
-                                    {{reward.itemDiscount}}
-                                </p>
-                                {{/if}}
-                                <div class="flex justify-between item-center">
-                                    <div class="flex items-center">
-                                        <!-- Customer points -->
-                                        <p class="text-gray-600 font-bold text-xs md:text-sm ml-1">
-                                            {{#if reward.customerPoints}} +{{reward.customerPoints}} points {{/if}}
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Description (categories, products) etc -->
-                            <div class="h-12 pb-1 md:pb-2 text-xs md:text-sm text-gray-500">
-                                <p>
-                                    {{description}}
-                                    <br/>
-                                    <br/>
-                                    Used {{dateUsed}}
-                                    </span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {{/each}}
-
     </div>
 
 
