--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -23,7 +23,7 @@
                     <div class="w-80 pb-2 bg-white rounded-xl shadow-xl z-10">
                         <div class="relative">
                             <!-- FIXME: use the image here, add a button to activate, probs will do the same with rewards -->
-                            <div data-qrcode="coupon:{{coupon.id}}" class="w-56 m-auto p-3"></div>
+                            <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
                             <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
                                 Your coupon
                             </div>
