--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -22,7 +22,7 @@
                     <div class="top-0 left-0 h-2 md:h-3 mt-6 pl-5 rounded-3xl absolute z-0 bg-green-600"></div>
                     <div class="w-80 pb-2 bg-white rounded-xl shadow-xl z-10">
                         <div class="relative">
-                            <!-- FIXME: use the image here, add a button to activate, probs will do the same with rewards -->
+                            <!-- TODO: use the image here, add a button to activate, probs will do the same with rewards -->
                             <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
                             <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
                                 Your coupon
