feat: better coupons page

--- a/loyalty-app/public/index.html
+++ b/loyalty-app/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>%REACT_APP_NAME%</title>
 
-    <!-- Common page CSS/JS -->
+    <!-- Common page CSS/JS (when not on localhost) -->
     <link rel="stylesheet" href="%PUBLIC_URL%/api/page/common/static/main.css"/>
     <script src="%PUBLIC_URL%/api/page/common/static/main.js"></script>
 </head>
