--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -22,8 +22,11 @@
                     <div class="top-0 left-0 h-2 md:h-3 mt-6 pl-5 rounded-3xl absolute z-0 bg-green-600"></div>
                     <div class="w-80 pb-2 bg-white rounded-xl shadow-xl z-10">
                         <div class="relative">
-                            <!-- TODO: use the image here, add a button to activate, probs will do the same with rewards -->
-                            <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
+                            <div>
+                                <!-- Include first image only for now -->
+                                <img src="{{mediaUrls.0}}" class="w-56 m-auto p-3" alt=""/>
+                            </div>
+
                             <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
                                 Your coupon
                             </div>
@@ -85,12 +88,24 @@
                                 </div>
                                 <div>
                                     <!-- The coupon expiration. The reward expiration is not really useful with coupons at all. -->
+                                    <!-- TODO: hours/minutes instead of date -->
                                     {{#if expires}}
                                     <p>
                                         Expires <span>{{expires}}</span>
                                     </p>
                                     {{/if}}
                                 </div>
+                            </div>
+                            <div>
+                                <details>
+                                    <summary
+                                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold mx-auto mt-1 w-fit py-1 px-2 rounded-full hover:scale-110 duration-500 transform transition">
+                                        Activate Now
+                                    </summary>
+                                    <div>
+                                        <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
+                                    </div>
+                                </details>
                             </div>
                         </div>
                     </div>
