--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -24,7 +24,7 @@
                         <div class="relative">
                             <div>
                                 <!-- Include first image only for now -->
-                                <img src="{{mediaUrls.0}}" class="w-56 m-auto p-3" alt=""/>
+                                <img src="{{mediaUrls.[0]}}" class="w-56 m-auto p-3" alt=""/>
                             </div>
 
                             <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
