style: fix coupon qr code "button" and more

--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -97,9 +97,9 @@
                                 </div>
                             </div>
                             <div>
-                                <details>
+                                <details class="details-qr-code">
                                     <summary
-                                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold mx-auto mt-1 w-fit py-1 px-2 rounded-full hover:scale-110 duration-500 transform transition">
+                                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold mx-auto mt-3 w-auto inline-block py-1 px-2 rounded-full hover:scale-110 duration-500 transform transition">
                                         Activate Now
                                     </summary>
                                     <div>
