--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -28,7 +28,7 @@
                             </div>
 
                             <div class="-bottom-2 right-0 mb-2 mr-2 px-2 rounded-lg absolute bg-yellow-500 text-gray-100 text-xs font-medium">
-                                Your coupon
+                                {{timeLeft}} left
                             </div>
                         </div>
                         <div class="px-2 py-1">
@@ -42,6 +42,11 @@
                                 <span>
                                     {{coupon.reward.name}}
                                 </span>
+                                <!-- Star -->
+                                <svg xmlns="http://www.w3.org/2000/svg" class="inline h-4 md:h-5 md:w-5 text-yellow-500"
+                                     viewBox="0 0 20 20" fill="currentColor">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+                                </svg>
                             </div>
                             <div class="flex py-2">
                                 {{#if coupon.reward.itemDiscount}}
