--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -105,10 +105,13 @@
                                 <details class="details-qr-code">
                                     <summary
                                             class="bg-blue-500 hover:bg-blue-700 text-white font-bold mx-auto mt-3 w-auto inline-block py-1 px-2 rounded-full hover:scale-110 duration-500 transform transition">
-                                        Activate Now
+                                        Use Now
                                     </summary>
                                     <div>
                                         <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
+                                        <div class="text-center" >
+                                            Show the QR code to use the coupon.
+                                        </div>
                                     </div>
                                 </details>
                             </div>
