--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -109,7 +109,7 @@
                                     </summary>
                                     <div>
                                         <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
-                                        <div class="text-center" >
+                                        <div class="text-center text-gray-500 text-sm" >
                                             Show the QR code to use the coupon.
                                         </div>
                                     </div>
