feat: page names in mobile navbar

--- a/assets/pages/coupons.html
+++ b/assets/pages/coupons.html
@@ -14,7 +14,7 @@
         {{#each user.availableCoupons}}
         <div>
             <div class="w-full h-full py-5 flex justify-center items-center">
-                <div class="relative shadow-md pl-1 bg-transparent flex justify-center rounded-xl hover:scale-110 duration-500 transform transition cursor-pointer">
+                <div class="relative shadow-md pl-1 bg-transparent flex justify-center rounded-xl duration-500 transform transition cursor-pointer">
                     <div class="top-0 left-0 mt-3 px-2 rounded-lg absolute z-30 bg-green-500 text-gray-100 text-xs md:text-sm font-medium md:block">
                         Available
                     </div>
@@ -109,7 +109,7 @@
                                     </summary>
                                     <div>
                                         <div data-qrcode="{{scanCode}}" class="w-56 m-auto p-3"></div>
-                                        <div class="text-center text-gray-500 text-sm" >
+                                        <div class="text-center text-gray-500 text-sm">
                                             Show the QR code to use the coupon.
                                         </div>
                                     </div>
